[package]
name = "lab-raytracing-rs"
version = "0.0.0"
edition = "2021"

[[test]]
name = "cucumber"
harness = false

[dependencies]
auto_ops = "0.3.0"
noise = "0.9.0"
pprof = { version = "0.14.0", features = ["flamegraph", "prost-codec", ] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
num_cpus = "1.16.0"
fastrand = "2.1.0"
indicatif = "0.17.8"
regex = "1.10.4"
approx = "0.5.1"
coz = "0.1.3"

[dev-dependencies]
cucumber = "0.10.2"
async-trait = "0.1.80"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
regex = "1.10.4"

[profile.release]
#lto = true
#codegen-units = 1
debug = true # for the flamegraph, alternatively set CARGO_PROFILE_RELEASE_DEBUG=true
